[gd_scene load_steps=14 format=3 uid="uid://k6d6svxheyc8"]

[ext_resource type="PackedScene" uid="uid://ylltdbdq4x8" path="res://Prefabs/main_character.tscn" id="1_th0lk"]
[ext_resource type="Script" path="res://Scripts/mob_spawner.gd" id="2_pnjfi"]
[ext_resource type="PackedScene" uid="uid://csvana673prer" path="res://Prefabs/mob.tscn" id="3_hj1yg"]
[ext_resource type="Script" path="res://Scripts/game_manager.gd" id="4_2cbo6"]
[ext_resource type="Texture2D" uid="uid://cy3iq11rhrgro" path="res://Assets/Счетчики и кнокпки/счетчик с деньгами.png" id="4_ciwsu"]
[ext_resource type="Texture2D" uid="uid://c16b8vymyo517" path="res://Assets/фон/Задник.png" id="5_mhtl8"]
[ext_resource type="Texture2D" uid="uid://w0s7dl82ngwk" path="res://Assets/фон/дом 1.png" id="6_hhsyl"]
[ext_resource type="Texture2D" uid="uid://bl2d77l2g12px" path="res://Assets/фон/дом 2.png" id="7_0g7mb"]
[ext_resource type="Texture2D" uid="uid://davf0xbiqb4lv" path="res://Assets/фон/дорога с тенью на которой стоит персонаж.png" id="8_exdbb"]

[sub_resource type="LabelSettings" id="LabelSettings_w8q0s"]
font_size = 80

[sub_resource type="LabelSettings" id="LabelSettings_qix6j"]
font_size = 72

[sub_resource type="LabelSettings" id="LabelSettings_v0qtv"]
font_size = 120

[sub_resource type="LabelSettings" id="LabelSettings_b7wyf"]
font_size = 40

[node name="Game" type="Node"]

[node name="MainCharacter" parent="." instance=ExtResource("1_th0lk")]
position = Vector2(748, 670)
scale = Vector2(2, 2)

[node name="MobSpawner" type="Node2D" parent="."]
script = ExtResource("2_pnjfi")
Mob = ExtResource("3_hj1yg")

[node name="LeftMarker" type="Marker2D" parent="MobSpawner"]
position = Vector2(-144, 685)

[node name="RightMarker" type="Marker2D" parent="MobSpawner"]
position = Vector2(1524, 698)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="WaveCleared" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -295.0
offset_top = -55.0
offset_right = 295.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
text = "WAVE CLEARED"
label_settings = SubResource("LabelSettings_w8q0s")
horizontal_alignment = 1

[node name="WaveNumber" type="Label" parent="CanvasLayer"]
offset_left = 513.0
offset_top = 131.0
offset_right = 958.0
offset_bottom = 230.0
text = "WAVE 1"
label_settings = SubResource("LabelSettings_qix6j")
horizontal_alignment = 1

[node name="YouDied" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -222.5
offset_top = -55.0
offset_right = 222.5
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
text = "YOU DIED!"
label_settings = SubResource("LabelSettings_v0qtv")
horizontal_alignment = 1

[node name="EnterToStart" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -222.0
offset_top = 338.0
offset_right = 223.0
offset_bottom = 393.0
grow_horizontal = 2
grow_vertical = 2
text = "PRESS ENTER TO START"
label_settings = SubResource("LabelSettings_b7wyf")
horizontal_alignment = 1

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 36.0
offset_right = 36.0
grow_horizontal = 2

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Control"]
position = Vector2(-286, 47)
scale = Vector2(6, 6)
texture = ExtResource("4_ciwsu")

[node name="GameManager" type="Node2D" parent="."]
script = ExtResource("4_2cbo6")

[node name="Background" type="Node2D" parent="."]
z_index = -5
scale = Vector2(6, 6)

[node name="Back" type="Sprite2D" parent="Background"]
texture_filter = 1
texture = ExtResource("5_mhtl8")
centered = false

[node name="House1" type="Sprite2D" parent="Background"]
texture_filter = 1
position = Vector2(48, 63.4)
texture = ExtResource("6_hhsyl")

[node name="House2" type="Sprite2D" parent="Background"]
texture_filter = 1
position = Vector2(191.4, 65)
texture = ExtResource("7_0g7mb")

[node name="Road" type="Sprite2D" parent="Background"]
position = Vector2(114.6, 133.6)
texture = ExtResource("8_exdbb")
